@@ -10,7 +10,7 @@ Environment for **Vert.x** Appication
 
 1. Alpine
 2. OpenJDK 18
-3. Vert.x 4.3.7
+3. Vert.x 4.3.8
 4. TZ=Asia/Shanghai
 5. C.UTF-8
 6. curl和telnet
@@ -20,28 +20,14 @@ Environment for **Vert.x** Appication
 ## 3. 编译并上传镜像
 
 ```sh
-docker buildx build --platform linux/arm64,linux/amd64 -t nnzbz/vertx:4.3.7 --build-arg VERSION=4.3.7 --build-arg JDK_VERSION=18 . --push
-docker buildx build --platform linux/arm64,linux/amd64 -t nnzbz/vertx:4.3.7-alpine --build-arg VERSION=4.3.7 --build-arg JDK_VERSION=alpine . --push
+docker buildx build --platform linux/arm64,linux/amd64 -t nnzbz/vertx:4.3.8 --build-arg VERSION=4.3.8 --build-arg JDK_VERSION=18 . --push
+docker buildx build --platform linux/arm64,linux/amd64 -t nnzbz/vertx:4.3.8-alpine --build-arg VERSION=4.3.8 --build-arg JDK_VERSION=alpine . --push
 # latest
-docker buildx build --platform linux/arm64,linux/amd64 -t nnzbz/vertx:latest --build-arg VERSION=4.3.7 --build-arg JDK_VERSION=18 . --push
-docker buildx build --platform linux/arm64,linux/amd64 -t nnzbz/vertx:alpine --build-arg VERSION=4.3.7 --build-arg JDK_VERSION=alpine . --push
+docker buildx build --platform linux/arm64,linux/amd64 -t nnzbz/vertx:latest --build-arg VERSION=4.3.8 --build-arg JDK_VERSION=18 . --push
+docker buildx build --platform linux/arm64,linux/amd64 -t nnzbz/vertx:alpine --build-arg VERSION=4.3.8 --build-arg JDK_VERSION=alpine . --push
 ```
 
-## 4. 单机
-
-```sh
-docker run -d --init --restart=always \
-  --log-opt max-size=50m
-  -e PROG_ARGS=run xxx.xxx.verticle.MainVerticle -cp conf/*:lib/*.jar -ha -hagroup xxx -Dhazelcast.logging.type=slf4j --launcher-class=io.vertx.core.Launcher \
-  -e JAVA_OPTS=--add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED --add-opens java.base/sun.net=ALL-UNNAMED \
-  -v /usr/local/xxx-svr/conf/:/usr/local/vertx/conf/:z \
-  -v /var/log/xxx-svr/:/usr/local/vertx/logs/:z \
-  -v /usr/local/xxx-svr/xxx-svr-x.x.x-jar-with-dependencies.jar:/usr/local/vertx/lib/myservice.jar:z \
-  --net=host \
-  --name 容器名称 nnzbz/vertx:4.3.7
-```
-
-## 5. Swarm
+## 4. Swarm
 
 ```sh
 mkdir /usr/local/bin,conf,stack,log/xxx-svr
@@ -54,10 +40,10 @@ vi /usr/local/stack/xxx-svr-stack.yml
 version: "3.9"
 services:
   svr:
-    image: nnzbz/vertx:4.3.7
+    image: nnzbz/vertx:4.3.8
     init: true
     environment:
-      - PROG_ARGS=run xxx.xxx.verticle.MainVerticle -cp conf/*:lib/*.jar -ha -hagroup xxx -Dhazelcast.logging.type=slf4j --launcher-class=io.vertx.core.Launcher
+      - PROG_ARGS=run xxx.xxx.verticle.MainVerticle -cp conf/*:lib/*.jar --options conf/vertx-option.json --ha --hagroup xxx -Dhazelcast.logging.type=slf4j
       - JAVA_OPTS=--add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED --add-opens java.base/sun.net=ALL-UNNAMED
       #- Xms100M -Xmx100M
       # 设置Log4j2使用异步日志
